fixed build under latest maven and jdk